// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lexer common tokens should allow underlined heading 1`] = `
Array [
  Object {
    "indent": 0,
    "level": 1,
    "raw": "Heading 1
======",
    "type": "heading",
    "value": "Heading 1",
  },
  Object {
    "indent": 0,
    "level": 2,
    "raw": "Heading 2
------",
    "type": "heading",
    "value": "Heading 2",
  },
  Object {
    "indent": 0,
    "raw": "Normal text",
    "type": "paragraph",
    "value": "Normal text",
  },
]
`;

exports[`lexer common tokens should parse the common tokens: '![alt text](image.png)' 1`] = `
Array [
  Object {
    "alt": "alt text",
    "indent": 0,
    "raw": "![alt text](image.png)",
    "type": "image",
    "url": "image.png",
  },
]
`;

exports[`lexer common tokens should parse the common tokens: '# Heading One Text' 1`] = `
Array [
  Object {
    "indent": 0,
    "level": 1,
    "raw": "# Heading One Text",
    "type": "heading",
    "value": "Heading One Text",
  },
]
`;

exports[`lexer common tokens should parse the common tokens: '## Heading Two Text' 1`] = `
Array [
  Object {
    "indent": 0,
    "level": 2,
    "raw": "## Heading Two Text",
    "type": "heading",
    "value": "Heading Two Text",
  },
]
`;

exports[`lexer common tokens should parse the common tokens: '### Heading Three Text' 1`] = `
Array [
  Object {
    "indent": 0,
    "level": 3,
    "raw": "### Heading Three Text",
    "type": "heading",
    "value": "Heading Three Text",
  },
]
`;

exports[`lexer common tokens should parse the common tokens: '#### Heading Four Text' 1`] = `
Array [
  Object {
    "indent": 0,
    "level": 4,
    "raw": "#### Heading Four Text",
    "type": "heading",
    "value": "Heading Four Text",
  },
]
`;

exports[`lexer common tokens should parse the common tokens: '##### Heading Five Text' 1`] = `
Array [
  Object {
    "indent": 0,
    "level": 5,
    "raw": "##### Heading Five Text",
    "type": "heading",
    "value": "Heading Five Text",
  },
]
`;

exports[`lexer common tokens should parse the common tokens: '###### Heading Six Text' 1`] = `
Array [
  Object {
    "indent": 0,
    "level": 6,
    "raw": "###### Heading Six Text",
    "type": "heading",
    "value": "Heading Six Text",
  },
]
`;

exports[`lexer common tokens should parse the common tokens: '<!-- comment item text -->' 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "<!-- comment item text -->",
    "type": "comment",
    "value": "comment item text",
  },
]
`;

exports[`lexer escaping should escape everything excepts tags for other tokens 1`] = `
Array [
  Object {
    "indent": 0,
    "level": 1,
    "raw": "# &Ampersand",
    "type": "heading",
    "value": "&amp;Ampersand",
  },
  Object {
    "indent": 0,
    "items": Array [
      Object {
        "checked": null,
        "count": null,
        "raw": "- 'SomeQuote'",
        "tokens": Array [
          Object {
            "indent": 0,
            "raw": "'SomeQuote'",
            "type": "paragraph",
            "value": "&#39;SomeQuote&#39;",
          },
        ],
        "type": "list-item",
      },
    ],
    "meta": Object {
      "check": false,
      "identifier": "-",
      "ordered": false,
    },
    "raw": "- 'SomeQuote'",
    "type": "list",
  },
  Object {
    "depth": 1,
    "indent": 0,
    "raw": "> Some \\" comment
<bold>bold</bold>",
    "tokens": Array [
      Object {
        "indent": 0,
        "raw": " Some \\" comment
<bold>bold</bold>",
        "type": "paragraph",
        "value": "Some &quot; comment <bold>bold</bold>",
      },
    ],
    "type": "quote",
  },
]
`;

exports[`lexer escaping should escape everything inside a code block 1`] = `
Array [
  Object {
    "indent": 0,
    "language": null,
    "raw": "\`\`\`
<div>
</div>
ab<cd
efg>
efg<
>>>
<<<<
& ampersand
'single quotes'
\\"double quotes\\"
\`\`\`",
    "type": "code-block",
    "value": "&lt;div&gt;
&lt;/div&gt;
ab&lt;cd
efg&gt;
efg&lt;
&gt;&gt;&gt;
&lt;&lt;&lt;&lt;
&amp; ampersand
&#39;single quotes&#39;
&quot;double quotes&quot;",
  },
]
`;
